# cubelite

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  sonar-project.properties
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: coordinator.agent.md  core.agent.md  design.agent.md  desktop.agent.md  devops.agent.md  docs.agent.md  macos.agent.md  pages.agent.md  qa.agent.md  reviewer.agent.md  security.agent.md
.github/instructions/: ci-devops.instructions.md  desktop-svelte.instructions.md  rust-core.instructions.md  swift-macos.instructions.md
.github/workflows/: ci-macos.yml  ci.yml  codeql.yml  on_branch_create.yml  pages.yml  release.yml
apps/desktop/: AGENTS.md  components.json  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
apps/desktop/src/: app.css  app.d.ts  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: env.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: kubernetes.rs
apps/desktop/src/lib/: age.test.ts  age.ts  cluster-identity.test.ts  cluster-identity.ts  errors.ts  index.ts  k8s-match.test.ts  k8s-match.ts  keyboard.test.ts  keyboard.ts  platform.ts  ports.test.ts  ports.ts  provider.test.ts  provider.ts  status.ts  tauri.test.ts  tauri.ts  units.test.ts  units.ts  window-drag.test.ts  window-drag.ts
apps/desktop/src/lib/stores/: app.svelte.ts  (+17 more)
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/desktop/tests/e2e/: app.spec.ts  tauri-mock.ts
apps/macos/: AGENTS.md
apps/macos/cubelite/: .gitignore  Info.plist
apps/macos/cubelite/cubelite.xcodeproj/: project.pbxproj
crates/cubelite-core/: AGENTS.md  Cargo.toml
crates/cubelite-core/src/: client.rs  context.rs  error.rs  helm.rs  kubeconfig.rs  lib.rs  logs.rs  metrics.rs  portforward.rs  resources.rs  types.rs  watcher.rs
crates/cubelite-core/tests/: kubeconfig_integration.rs  resources_and_errors.rs
design/: README.md  export-tokens.ts  tokens.json
design/design_handoff_cubelite_ui/: CubeLite Prototype.dc.html  Design System.dc.html  Explorations.dc.html  README.md  tokens-v2.json
design/icons/cubelite.icon/: icon.json
docs/: RELEASING.md  agent-governance-playbook.md  apple-hig-components.md  apple-hig-patterns-inputs.md  apple-hig-summary.md  architecture.md  cubelite-macos-design-instructions.md  hig-review-report.md  penpot-macos-audit.md  penpot-mcp-setup.md
docs/guide/: README.md  faq.md  features.md  installation.md  quickstart.md
docs/superpowers/plans/: 2026-07-15-desktop-log-viewer-pr-a-service.md  2026-07-15-pod-log-viewer-pr-a-service.md  2026-07-15-pod-log-viewer-pr-b-panel-core.md  2026-07-15-pod-log-viewer-pr-c-search.md  2026-07-15-pod-log-viewer-pr-d-session-tabs.md  2026-07-15-pod-log-viewer-pr-e-entry-export.md  2026-07-15-pod-log-viewer-pr-f-reconnect.md  2026-07-18-desktop-window-portforward.md  2026-07-18-logs-parity.md  2026-07-18-macos-overview-parity.md  2026-07-18-macos-quickfix-batch.md
docs/superpowers/specs/: 2026-07-15-pod-log-viewer-design.md  2026-07-18-desktop-window-portforward-design.md  2026-07-18-logs-parity-design.md  2026-07-18-macos-overview-parity-design.md  2026-07-18-macos-quickfix-batch-design.md
site/: doc-template.html  index.html  style.css
(+182 files in other folders)
