[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/massimilianolapuma/cubelite"
rust-version = "1.82"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "0.97", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
