[workspace]
resolver = "2"
members = ["crates/cubelite-core", "apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "0.97", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
