[package]
name = "cubelite-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
dirs = "5"
kube = { version = "0.97", features = ["runtime", "derive", "client", "oidc", "ws"] }
serde_json = { workspace = true }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
base64 = "0.22"
http = "1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
