[package]
name = "cubelite-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cubelite_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
cubelite-core = { path = "../../../crates/cubelite-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
